test(LottoTest): 당첨_번호와_일치하는_번호_갯수_확인 테스트를 간결하게 수정